Project

General

Profile

Bug #24689

Warning when importing dashboard key or cert

Added by Anonymous over 5 years ago. Updated almost 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
ceph-mgr
Target version:
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Using the documented commands to import a signed cert or key e.g.

ceph config-key set mgr mgr/dashboard/crt -i dashboard.crt

produces the following warning:

WARNING: it looks like you might be trying to set a ceph-mgr module configuration key.  Since Ceph 13.0.0 (Mimic), mgr module configuration is done with `config set`, and new values set using `config-key set` will be ignored.

The configuration does actually work so the warning is wrong.


Related issues

Related to Dashboard - Bug #39123: mgr/dashboard: SSL certificate upload command throws deprecation warning Resolved

History

#1 Updated by Lenz Grimmer over 5 years ago

  • Category changed from 132 to ceph-mgr
  • Assignee changed from Lenz Grimmer to John Spray

Thanks for reporting this, Stuart.

@John, this message originates from the Mgr directly. Any thoughts?
I'm fine with adding a note to the Dashboard documentation in Mimic to ignore this warning.
Thanks to #24651 this should no longer be an issue in Nautilus...

#2 Updated by Anonymous over 5 years ago

I've also noticed a mistake in the commands given on this page http://docs.ceph.com/docs/mimic/mgr/dashboard/#ssl-tls-support

$ ceph config-key set mgr mgr/dashboard/crt -i dashboard.crt
$ ceph config-key set mgr mgr/dashboard/key -i dashboard.key

They should be:

$ ceph config-key set mgr/dashboard/crt -i dashboard.crt
$ ceph config-key set mgr/dashboard/key -i dashboard.key

#3 Updated by John Spray over 5 years ago

Oops, yeah - this message was added before we realised that some code would still use "config-key set" for the -i option.

Like you say, this will not be an issue in nautilus, but it's pretty easy to fix it in Mimic to not issue this warning for the dashboard, so I'll open a PR to do that.

#4 Updated by John Spray over 5 years ago

  • Status changed from New to Fix Under Review

#5 Updated by Yuri Weinstein over 5 years ago

#6 Updated by John Spray over 5 years ago

  • Status changed from Fix Under Review to Resolved

#7 Updated by Lenz Grimmer about 5 years ago

  • Pull request ID set to 22770

#8 Updated by Jared Hardy almost 5 years ago

I can confirm this issue is still true, with the exact same warning text given today (CentOS 7 RPM v14.2), and remains a problem with both the nautilus and master versions of the documentation still recommending the same config-key command.

http://docs.ceph.com/docs/nautilus/mgr/dashboard/#dashboard-ssl-tls-support
http://docs.ceph.com/docs/master/mgr/dashboard/#dashboard-ssl-tls-support

#9 Updated by Ricardo Dias almost 5 years ago

The fix developed by John was only applied to the Mimic release, therefore in Nautilus we have again the same warning when "ceph config-key set ..." is used.

I will open a new ticket and respective PR to fix this by adding two new commands to the dashboard to upload the SSL certificate and key.

#10 Updated by Ricardo Dias almost 5 years ago

  • Related to Bug #39123: mgr/dashboard: SSL certificate upload command throws deprecation warning added

Also available in: Atom PDF